# tinder-bot

./: .gitignore  pyproject.toml  requirements.txt  run_tinder_bot.py
scripts/: debug_gpt_integration.py  debug_scroll.py  debug_scroll_and_capture.py
src/: test_window_detection.py
src/tests/: __init__.py  conftest.py  test_capture.py  test_gpt.py  test_message.py  test_scroll.py  test_scroll_and_capture.py  test_window.py
src/tinder_bot/: __init__.py  ads.py  capture.py  capture_and_stitch.py  cli.py  gpt.py  image_utils.py  like.py  message.py  pil_capture.py  profile_analyzer.py  profile_processor.py  scroll.py  system_prompt.py  window.py
src/tinder_bot.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
